cluster/gitops/networking/vpn/gateway/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway
specs:
  - description: vpn-gateway
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: vpn-gateway
        app.kubernetes.io/instance: vpn-gateway
        app.kubernetes.io/component: vpn-gateway
    egress:
      # Allow traffic to the VPN endpoints.
      - toCIDRSet:
          - cidrGroupSelector:
              matchLabels:
                external.netpols.home.arpa/egress.vpn-endpoints: "true"
        toPorts:
          - ports:
              - port: "1"
                endPort: 65535
                protocol: UDP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "9999"
                protocol: TCP
      # Proxy ports
      - fromEndpoints:
          - matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
            matchLabels:
              endpoints.netpols.home.arpa/vpn-client: "true"
        toPorts: &proxy_ports
          - ports:
              # HTTP proxy
              - port: "8888"
                protocol: TCP
              # Shadowsocks proxy
              - port: "8388"
                protocol: TCP
      # Allow intranet traffic to proxy via the VPN gateway
      - fromCIDRSet:
          - cidrGroupRef: intranet
        toPorts: *proxy_ports
